Challange.html - added new col with picture, spans and infomarion on 21 day challange. new styles added too. Index.html font's changed and paddng added to make the spacing look more user friendly.  Trainer. 3 cards added with all the information i need. Just need to style it to get it looking correct and responsive

--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,6 +1,5 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,800&display=swap');
-   
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,700&display=swap');
   *{
     margin:0;
     padding:0;
@@ -10,7 +9,7 @@
 
     body { 
 
-        font-family: "Open Sans",sans-serif;
+        font-family: "Roboto",sans-serif;
         font-size: 25px;
         
         
@@ -25,6 +24,7 @@
         
         
     }
+
 
     
 /***********************Nav and heading**/
@@ -75,29 +75,32 @@
 
 }
 
-.background-2{
-  height: 1000px;
-    max-width:100%;
-    background:url(images/background-2.jpg) no-repeat center center;
-    background-size: cover;
-    background-position: center;
+/***************************************Quotes**/
+
+.quote-section{
+background-color: black;
+width: 100%;
+height: auto;
+color: white;
+}
+.quote-challange{
+font-family: "Robo";
 }
 
-.call-out {
-    background-color: black;
-    width: 100%;
-    height: 300px;
-    text-align: center;
-    padding-top:100px ;
 
-}
 .cover-text {
     color: white;
     text-align: center;
     text-transform: uppercase;
+    padding-top: 25%;
 }
 
 /******************Modal**/
+
+.btn {
+  color:#fff; 
+  border-color: white;
+}
 .modal-content .exampleModalLabel {
     width: 80%;
     margin: 0 auto;
@@ -163,19 +166,46 @@
 
   /****************************quotes*/
 
-  .quote {
+.quote {
 
 text-align: center;
 
- 
-
   }
 
+  .quote-challange{
+
+  }
   .quote h3 {
     
     text-transform: uppercase;
+    padding-top:25px;
   
     }
+
+    .quote p {
+    
+      
+      padding-top:10%;
+      font-size: 20px;
+      font-family: "Lora",sans-serif;
+    
+      }
+.quote-challange {
+    text-align: center;
+  }
+
+  .quote-challange h3 {
+    text-transform: uppercase;
+    padding-top:25px;
+  }
+
+  .quote-challange p {
+
+      font-size: 20px;
+      font-family: "Lora",sans-serif;
+      padding-bottom: 10%;
+  }
+
 
   
   
